--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
