--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "flowbite-react": "^0.11.7",
+    "framer-motion": "^12.14.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
